# aoc-2020

./: .gitignore  next-puzzle.py  pyproject.toml  tasks.py  template.py
2020/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
day 02/: part_a.py  part_b.py
day 03/: part_b.py
day 05/: part_b.py
day 07/: part_a.py  part_b.py
day 08/: part_a.py
day 09/: part_a.py
day 1/: part_a.py  part_b.py
day 10/: part_a.py  part_b.py
day 11/: part_a.py  part_b.py
day 12/: part_a.py  part_b.py
day 13/: part_a.py  part_b.py
day 14/: part_a.py  part_b.py
day 15/: part_a.py  part_b.py
day 16/: part_a.py  part_b_backtracking.py  part_b_naive.py  part_b_sensible.py
day 17/: part_a.py  part_b.py
day 18/: part_a.py  part_b.py
day 19/: part_a.py  part_b.py  part_b_stdlib_re.py
day 20/: part_a.py  part_b.py
day 21/: part_a.py  part_b.py
day 22/: part_a.py  part_b.py
day 23/: part_a.py  part_b.py  part_b_simpler.py
day 24/: part_a.py  part_b.py
day 25/: part_a.py
day 3/: part_a.py
day 4/: part_a.py  part_b.py
day 5/: part_a.py
day 6/: part_a.py  part_b.py
day 8/: part_b.py
day 9/: part_b.py
