[tool.poetry]
name = "aoc-2020"
version = "0.1.0"
description = "Advent of Code 2020"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.1.2"
black = "^20.8b1"
advent-of-code-data = "^0.8.5"
python-dotenv = "^0.15.0"
parse = "^1.18.0"
more-itertools = "^8.6.0"
regex = "^2020.11.13"
numpy = "^1.19.4"
dataslots = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
